--- a/Kontroldarbs/style.css
+++ b/Kontroldarbs/style.css
@@ -1,19 +1,39 @@
 
+.Galvene{
+    background-color: #C4DFDF;
+    height: 12vh;
+}
+.Virsraksts{
+   text-align: center;
+   color: #5DA2A2;
+   margin-left: 20%;
+   margin-right: 20%;
+   
+   
+   
+}
+    
+.VisasPogas{  
 
-.container1{
+display: flex;
+justify-content: space-between ;
+margin-left: 20%;
+margin-right: 20%;
+
+
+  
+}
+
+.btn {
+background-color:white ;
+
+
+}
+.container{
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    display: grid;
-  
-    gap:10px;
-    background-color: rgb(182, 221, 156);
-}
+    height: 90vh;
 
-.poga{
-background-color:white ;
-
-}
-.virsraksts{
-   
 }
